# multi-agent-analysis

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  financial_data.db  main.py  prompt.md  pyproject.toml  ruff.toml
.claude/: settings.local.json
data/: finance_economics_dataset.csv:Zone.Identifier
src/: config.py
src/agents/: __init__.py  data_manager.py  database_manager.py
src/agents/data_extractor/: agent.py  mcp.py  prompts.py
src/agents/data_prep/: agent.py  mcp.py  prompts.py
src/agents/interpreter/: agent.py  models.py  prompts.py
src/agents/supervisor/: agent.py  prompts.py
src/agents/visualisation/: agent.py  models.py  prompts.py  widgets.py
src/cli/: __init__.py  formatters.py  manager.py
src/config/: database.py
src/core/: __init__.py  base_agent.py  models.py  runner.py  state.py  types.py
streamlit_app/: README.md  __init__.py  app.py  formatters.py  requirements.txt  st_cb_handler.py
tests/: test_sql_validation.py
