[project]
name = "MultiAgent"
version = "0.1.0"
description = "Multi Agent BI analysis"
authors = [
    {name = "Joe Barhouch", email = "joe.barhouch@gmail.com"}
]
requires-python = ">=3.12"

dependencies = [
    "langgraph",
    "langchain-openai",
    "langchain-anthropic",
    "python-dotenv",
    "langchain-community>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "mcp[cli]>=1.12.2",
    "sqlalchemy>=2.0.41",
    "langchain-sandbox>=0.0.6",
    "langgraph-supervisor>=0.0.28",
    "streamlit>=1.47.1",
    "yfinance>=0.2.65",
    "rich>=13.0.0",
    "ruff>=0.12.5",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langsmith>=0.4.8",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.1",
    "statsmodels>=0.14.5",
    "plotly>=6.2.0",
    "pandas>=2.3.1",
    "numpy>=2.3.2",
    "ipython>=9.4.0",
    "e2b>=1.8.0",
    "snowflake-connector-python>=3.12.0",
    "snowflake-sqlalchemy>=1.7.0",
]

[tool.setuptools]
packages = ["src"]
